improved calculation of the perfusionmap and colormapping

--- a/main/KardioPerfusion.ui
+++ b/main/KardioPerfusion.ui
@@ -127,10 +127,13 @@
                </size>
               </property>
               <property name="minimum">
-               <number>2</number>
+               <number>3</number>
               </property>
               <property name="maximum">
                <number>50</number>
+              </property>
+              <property name="value">
+               <number>5</number>
               </property>
              </widget>
             </item>
@@ -491,7 +494,7 @@
              <number>1</number>
             </property>
             <property name="value">
-             <number>20</number>
+             <number>4</number>
             </property>
            </widget>
           </item>
