--- a/main/KardioPerfusion.ui
+++ b/main/KardioPerfusion.ui
@@ -74,7 +74,7 @@
              <bool>false</bool>
             </property>
             <property name="editTriggers">
-             <set>QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed</set>
+             <set>QAbstractItemView::EditKeyPressed</set>
             </property>
             <property name="selectionMode">
              <enum>QAbstractItemView::ExtendedSelection</enum>
