--- a/main/KardioPerfusion.ui
+++ b/main/KardioPerfusion.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1128</width>
-    <height>901</height>
+    <height>899</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -28,7 +28,7 @@
     <item>
      <layout class="QVBoxLayout" name="verticalLayout_6" stretch="0,0">
       <property name="sizeConstraint">
-       <enum>QLayout::SetMinimumSize</enum>
+       <enum>QLayout::SetMaximumSize</enum>
       </property>
       <property name="leftMargin">
        <number>0</number>
@@ -500,6 +500,36 @@
           </item>
          </layout>
         </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_13">
+          <item>
+           <widget class="QLabel" name="label_7">
+            <property name="text">
+             <string>Opacity</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QSlider" name="slider_opacity">
+            <property name="maximum">
+             <number>10</number>
+            </property>
+            <property name="singleStep">
+             <number>1</number>
+            </property>
+            <property name="pageStep">
+             <number>1</number>
+            </property>
+            <property name="value">
+             <number>6</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
        </layout>
       </item>
       <item>
@@ -526,7 +556,7 @@
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeType">
-       <enum>QSizePolicy::Fixed</enum>
+       <enum>QSizePolicy::MinimumExpanding</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
@@ -604,7 +634,7 @@
          </size>
         </property>
         <property name="currentIndex">
-         <number>0</number>
+         <number>1</number>
         </property>
         <widget class="QWidget" name="tab_tac">
          <attribute name="title">
@@ -847,7 +877,6 @@
      </layout>
     </item>
    </layout>
-   <zorder></zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -946,6 +975,7 @@
    <class>QwtPlot</class>
    <extends>QFrame</extends>
    <header>qwt_plot.h</header>
+   <container>1</container>
   </customwidget>
   <customwidget>
    <class>MultiPlanarReformatWidget</class>
@@ -978,8 +1008,8 @@
    <slot>sliderStartValue_changed()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>422</x>
-     <y>535</y>
+     <x>697</x>
+     <y>734</y>
     </hint>
     <hint type="destinationlabel">
      <x>213</x>
@@ -994,8 +1024,8 @@
    <slot>sliderEndValue_changed()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>422</x>
-     <y>540</y>
+     <x>697</x>
+     <y>782</y>
     </hint>
     <hint type="destinationlabel">
      <x>254</x>
@@ -1010,12 +1040,12 @@
    <slot>tableGamma_clicked(QModelIndex)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>404</x>
-     <y>499</y>
+     <x>698</x>
+     <y>685</y>
     </hint>
     <hint type="destinationlabel">
-     <x>217</x>
-     <y>587</y>
+     <x>225</x>
+     <y>626</y>
     </hint>
    </hints>
   </connection>
@@ -1026,12 +1056,28 @@
    <slot>cb_enableGamma_toggled()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>404</x>
-     <y>502</y>
+     <x>698</x>
+     <y>708</y>
     </hint>
     <hint type="destinationlabel">
      <x>244</x>
      <y>690</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>slider_opacity</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>KardioPerfusion</receiver>
+   <slot>slider_opacity_changed()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>150</x>
+     <y>523</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>168</x>
+     <y>559</y>
     </hint>
    </hints>
   </connection>
@@ -1048,5 +1094,6 @@
   <slot>sliderEndValue_changed()</slot>
   <slot>tableGamma_clicked(QModelIndex)</slot>
   <slot>cb_enableGamma_toggled()</slot>
+  <slot>slider_opacity_changed()</slot>
  </slots>
 </ui>
