--- a/main/KardioPerfusion.ui
+++ b/main/KardioPerfusion.ui
@@ -597,6 +597,13 @@
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_18">
         <item>
+         <widget class="QPushButton" name="btn_highResolution">
+          <property name="text">
+           <string>HighResolution</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <spacer name="horizontalSpacer_12">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
