--- a/main/KardioPerfusion.ui
+++ b/main/KardioPerfusion.ui
@@ -87,6 +87,30 @@
          </layout>
         </item>
         <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_15">
+          <item>
+           <widget class="QLCDNumber" name="num_phase">
+            <property name="segmentStyle">
+             <enum>QLCDNumber::Flat</enum>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer_13">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
+        </item>
+        <item>
          <layout class="QVBoxLayout" name="verticalLayout">
           <property name="bottomMargin">
            <number>0</number>
@@ -649,7 +673,7 @@
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
-          <height>350</height>
+          <height>250</height>
          </size>
         </property>
        </spacer>
