--- a/main/KardioPerfusion.ui
+++ b/main/KardioPerfusion.ui
@@ -1091,6 +1091,9 @@
    <property name="text">
     <string>Open Images...</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+O</string>
+   </property>
   </action>
   <action name="actionExit">
    <property name="icon">
@@ -1099,6 +1102,9 @@
    </property>
    <property name="text">
     <string>Exit</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
    </property>
   </action>
   <action name="actionPrint">
@@ -1127,10 +1133,16 @@
    <property name="text">
     <string>Save Project</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
+   </property>
   </action>
   <action name="actionOpen_Project">
    <property name="text">
     <string>Open Project...</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+O</string>
    </property>
   </action>
  </widget>
