--- a/main/KardioPerfusion.ui
+++ b/main/KardioPerfusion.ui
@@ -552,6 +552,9 @@
             </item>
             <item>
              <widget class="QSlider" name="slider_opacity">
+              <property name="minimum">
+               <number>0</number>
+              </property>
               <property name="maximum">
                <number>10</number>
               </property>
@@ -564,8 +567,20 @@
               <property name="value">
                <number>6</number>
               </property>
+              <property name="sliderPosition">
+               <number>6</number>
+              </property>
+              <property name="tracking">
+               <bool>true</bool>
+              </property>
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="invertedAppearance">
+               <bool>false</bool>
+              </property>
+              <property name="invertedControls">
+               <bool>false</bool>
               </property>
              </widget>
             </item>
@@ -671,9 +686,12 @@
            </widget>
           </item>
           <item>
-           <widget class="QSlider" name="slider_Thickness_3">
+           <widget class="QSlider" name="slider_thickness">
+            <property name="minimum">
+             <number>1</number>
+            </property>
             <property name="maximum">
-             <number>10</number>
+             <number>20</number>
             </property>
             <property name="singleStep">
              <number>1</number>
@@ -682,10 +700,45 @@
              <number>1</number>
             </property>
             <property name="value">
-             <number>6</number>
+             <number>1</number>
+            </property>
+            <property name="sliderPosition">
+             <number>1</number>
             </property>
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="tickPosition">
+             <enum>QSlider::TicksAbove</enum>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QSpinBox" name="sb_thickness">
+            <property name="readOnly">
+             <bool>true</bool>
+            </property>
+            <property name="minimum">
+             <number>-20</number>
+            </property>
+            <property name="maximum">
+             <number>20</number>
+            </property>
+            <property name="value">
+             <number>0</number>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="label_slider">
+            <property name="maximumSize">
+             <size>
+              <width>70</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <property name="text">
+             <string> mm</string>
             </property>
            </widget>
           </item>
@@ -1269,5 +1322,6 @@
   <slot>tableGamma_clicked(QModelIndex)</slot>
   <slot>cb_enableGamma_toggled()</slot>
   <slot>slider_opacity_changed()</slot>
+  <slot>slider_thickness_changed()</slot>
  </slots>
 </ui>
