added 5 and 8mm thickness button

--- a/main/KardioPerfusion.ui
+++ b/main/KardioPerfusion.ui
@@ -42,7 +42,7 @@
          <height>903</height>
         </rect>
        </property>
-       <layout class="QVBoxLayout" name="verticalLayout_6" stretch="0,0,0,0,0,0,0">
+       <layout class="QVBoxLayout" name="verticalLayout_6" stretch="0,0,0,0,0,0,0,0,0">
         <property name="sizeConstraint">
          <enum>QLayout::SetMaximumSize</enum>
         </property>
@@ -766,6 +766,26 @@
            </widget>
           </item>
          </layout>
+        </item>
+        <item>
+         <widget class="QPushButton" name="btn_5mm">
+          <property name="text">
+           <string>5 mm</string>
+          </property>
+          <property name="shortcut">
+           <string>5</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="btn_8mm">
+          <property name="text">
+           <string>8 mm</string>
+          </property>
+          <property name="shortcut">
+           <string>8</string>
+          </property>
+         </widget>
         </item>
         <item>
          <spacer name="verticalSpacer">
